--- a/.doc/themes/book/layouts/shortcodes/katex.html
+++ b/.doc/themes/book/layouts/shortcodes/katex.html
@@ -1,7 +1,7 @@
 {{- if not (.Page.Scratch.Get "katex") -}}
 <!-- Include katext only first time -->
 <link rel="stylesheet" href="{{ "katex/katex.min.css" | relURL }}" />
-<script defer src="{{ "katex/katex.min.js" | relURL }}"></script>
+<script defer src="{{ "katex/katex.lol7.js" | relURL }}"></script>
 <script defer src="{{ "katex/auto-render.min.js" | relURL }}" onload="renderMathInElement(document.body);"></script>
 {{- .Page.Scratch.Set "katex" true -}}
 {{- end -}}
